Add Spotify Token

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,5 +8,18 @@
 
 
   <script src="../dist/spotify-wrapper-umd.js"></script>
+  <script>
+
+    const albums = spotifyWrapper.searchAlbums('Metallica');
+
+    albums
+      .then(data => console.log(data))
+      .catch(err => console.log(err))
+    ;
+
+  </script>
+
+
+
 </body>
 </html>
