--- a/examples/index.html
+++ b/examples/index.html
@@ -6,20 +6,10 @@
 </head>
 <body>
 
-
-  <script src="../dist/spotify-wrapper-umd.js"></script>
-  <script>
-
-    const albums = spotifyWrapper.searchAlbums('Metallica');
-
-    albums
-      .then(data => console.log(data))
-      .catch(err => console.log(err))
-    ;
-
-  </script>
+  <div id="albums"></div>
 
 
-
+  <script src="../dist/spotify-wrapper-umd.min.js"></script>
+  <script src="albums.js"></script>
 </body>
 </html>
